# TheOutFit

./: .gitignore  AGENTS.md  README.md  SystemPrompt.md
TheOutFit_Port/: CMakeLists.txt  TheOutFit_Debug.sln  TheOutFit_Debug.vcxproj  theoutfit_manifest.toml
TheOutFit_Port/config/: manual_functions.toml
TheOutFit_Port/src/: main.cpp  theoutfit.rc  theoutfit_app.h
docs/: address_ledger.md  asset_ledger.md  regression_log.md  toolchain.md
docs/rexglue_patches/: 0001-use-manual-switch-tables-during-block-discovery.patch  0002-tolerate-modifier-only-physical-protection.patch  0003-defer-d3d12-primary-submission-with-pending-uav-work.patch  0004-diagnose-d3d12-shared-memory-coherency.patch  0005-diagnose-d3d12-resolve-coherency-loop.patch  0006-diagnose-d3d12-host-render-target-extent-and-resolve.patch  README.md
scripts/: translate_switch_tables.py  xref_ppc_in_xex.py  xref_recomp_static.py
